# workspace-control

./: .gitignore  AGENTS.md  NEXT.md  README.md  main.py  pyproject.toml
app/: __init__.py
configs/: public_repo_probe.json
reports/: latest_eval.json  latest_eval.md
scripts/: debug_replay_case.py  find_replay_candidates.py  replay_git_history_eval.py  run_demo.py  run_eval_suite.py  run_public_repo_probe.py  run_replay_matrix.py  save_baseline.py
server/: __init__.py  app.py  db.py  models.py  planner.py  schemas.py
sniffer/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/: test_analyze.py  test_app_layer.py  test_debug_replay_case.py  test_discover_architecture.py  test_discovery_providers.py  test_discovery_target_registry.py  test_eval_runner.py  test_evidence_aggregation.py  test_explain_feature.py  test_feature_cli_targets.py  test_feature_intake.py  test_fixture_target_pack.py  test_framework_detection.py  test_manifests.py  test_new_domain_planning.py  test_plan.py  test_plan_bundle.py  test_propose.py  test_public_repo_probe.py  test_recipe_pipeline_integration.py  test_recipe_suggester.py  test_replay_candidate_workflow.py  test_replay_git_history_eval.py  test_repo_learning.py  test_repo_profile_bootstrap.py  test_run_demo.py  test_save_baseline.py  test_semantic_enrichment.py  test_server_api.py  test_snapshot_pipeline.py  test_source_graph.py
web/: index.html  package-lock.json  package.json
workspace_control/: __init__.py  analyze.py  cli.py  explain.py  graph.py  intake.py  (+8 more)
(+272 files in other folders)
