[project]
name = "workspace-control"
version = "0.1.0"
description = "CLI inventory for stackpilot manifests"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
  "pytest>=8.0,<9",
  "uvicorn[standard]>=0.30,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*", "server*", "workspace_control*"]
exclude = ["configs*", "data*", "eval_repos*", "reports*", "tests*", "web*"]

[tool.setuptools.package-data]
app = ["framework_packs/*.json"]
